--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# ---> C++
 # Prerequisites
 *.d
 
@@ -30,3 +31,11 @@
 *.exe
 *.out
 *.app
+
+# ---> VisualStudioCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/arduino.json
