--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=StreamCommander
-version=1.0.0
-author=Jan-Eric Schober <je@schober.industries>
-maintainer=Jan-Eric Schober <je@schober.industries>
+version=1.0.2
+author=Jan-Eric Schober <je@aesyc.co>
+maintainer=Jan-Eric Schober <je@aesyc.co>
 sentence=A simple library for interacting with the MCU via any Stream-based Interface.
 paragraph=Adds the functionality to interact via pre-defined & custom commands, and send Status-Updates.
 category=Communication
-url=https://je.schober.industries.com/
+url=https://aesyc.co/
 includes=StreamCommander.hpp
